tests/negative/neg_pr113_string_discriminant.safe
package neg_pr113_string_discriminant
   type packet (label : string) is
      record
         value : integer;

